Scrollbars issue resolved and also video tutorials

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -140,7 +140,7 @@ td {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f7f7f7;
+  background: rgba(0, 0, 0, 0);
 }
 
 /* Handle */
